Guille: Rutas de Huéspedes y Usarios

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -142,7 +142,7 @@
                 /* left: 100px; */
                 }
 
-
+/*================== profile =======================*/ 
 
 /*================== Footer =======================*/
 .redes {
