--- a/public/css/header-footer.css
+++ b/public/css/header-footer.css
@@ -31,7 +31,7 @@
                padding: 20px;
                font-size: 30px;
             }
-            .top-bar label i{
+            .hamburger i{
                 position:absolute;
                 top:10px;
                 left: 10px;
@@ -66,6 +66,7 @@
             display: flex;
             align-items: center;
             height: 70%;
+            width: 500px;
             
             }
             .logo{
@@ -85,7 +86,7 @@
         .icono-carrito{
             color: hsl(202, 61%, 50%);
             font-size: 13px;
-            margin-right: 30px;
+            margin-right: 40px;
         }
             .icono-carrito i{
             font-size: 1.5em;
@@ -97,11 +98,36 @@
             .login{
                 margin-right: 10px;
             }
-/*================== Sección principal =======================*/         
-section{
-    margin-top: 60px;
-}
+        .crt-prof{
+           display: flex;
+           margin-right: 15px;
+        }
 
+          .crt-prof a{
+              margin-right:  15px;
+          }
+
+                   
+           
+/*================== profile =======================*/         
+.container{
+    margin-top: 100px;
+    display: flex;
+}
+    .container img{
+        margin-left: 0;
+        width: 40%;
+    }
+
+    .info{
+        margin-left: 30px;
+    }
+
+        .info p{
+            font-family:Roboto;
+            font-size: 15px;
+            color: hsl(202, 61%, 50%);
+        }
 /*================== footer =======================*/
     .redes {
         display: flex;
@@ -166,7 +192,7 @@ section{
     }
     
     .accesos{
-        display: block;
+        display: flex;
                    
     }
 
@@ -178,6 +204,7 @@ section{
             color: #3295ce;
             text-decoration: none;
             font-weight: bold;
+            margin-right: 20px;
         }
            
     .lista-footer{
@@ -185,6 +212,32 @@ section{
         justify-content: space-around;
         width: 100%;
     }            
+
+.crt-prof{
+    display: flex;
+    margin-right: 50px;
+    margin-top: 10px;
+    margin-left: 300px;
+    max-height: 40px;
+}
+    .crt-prof i{
+        font-size:  30px;
+    }
+    .crt-prof img{
+        margin-right: 30px;
+        width: 15%;
+    }
+    .info{
+        margin-left: 60px;
+    }
+
+    .info p{
+        font-size: 25px;
+    }
+    .container img{
+        margin-left: 50px;
+        width: 30%;
+    }
 }
             
 @media(min-width: 1000px){
