--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,7 @@
             </a>
 
             <% if (locals.isLogged){ %>
-                <img src="/images/users/<%= locals.userLogged.avatar %>" width="40" style="border-radius: 100%;">
+                <img src="/images/users/<%= locals.userLogged.avatar %>" width="40" style="border-radius: 100%">
                 <nav class="accesos">
                     <a href="/users/profile">Perfil</a>
                     <a href="/users/Logout">Logout</a>
