--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -7,7 +7,7 @@
     <body>
         <%- include ('../partials/header') %>
             <section>
-                <div class="container">
+                <div class="containerProf">
                     <img src="/images/users/<%= user.avatar%>">
                     <div class="info">
                         <p>
